ship oi with own minimal jvm